<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuizActivity">
    <androidx.gridlayout.widget.GridLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:rowCount="2" app:columnCount="2"
            android:layout_margin="@dimen/default_gap" app:useDefaultMargins="false"
            android:id="@+id/gridLayout">

        <TextView
                android:text="@string/answer_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_row="0" app:layout_column="0"
                android:id="@+id/answerA" android:gravity="center_horizontal|center_vertical"
                app:layout_gravity="top|left" android:textColor="#FFFFFF" android:textSize="80sp"
                android:textStyle="bold" android:background="#03A9F4" android:layout_margin="@dimen/default_gap"
                app:layout_columnWeight="1" app:layout_rowWeight="1"/>
        <TextView
                android:text="@string/answer_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_row="0" app:layout_column="1"
                android:id="@+id/answerB" android:gravity="center_horizontal|center_vertical"
                app:layout_gravity="right|top" android:background="#03F4A9" android:textSize="80sp"
                android:textStyle="bold" android:textColor="#FFFFFF" android:layout_margin="@dimen/default_gap"
                app:layout_columnWeight="1"/>
        <TextView
                android:text="@string/answer_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/answerC"
                android:gravity="center_horizontal|center_vertical"
                app:layout_gravity="bottom|left" android:background="#F4A903" android:textSize="80sp"
                android:textStyle="bold" android:textColor="#FFFFFF" android:layout_margin="@dimen/default_gap"
                app:layout_columnWeight="1"/>
        <TextView
                android:text="@string/answer_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/answerD"
                android:gravity="center_horizontal|center_vertical"
                app:layout_gravity="bottom|right" android:background="#8027B0" android:textSize="80sp"
                android:textStyle="bold" android:textColor="#FFFFFF" android:layout_margin="@dimen/default_gap"
                app:layout_columnWeight="1"/>
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>