<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuizHostActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/quiz_input">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/input_question">

            <Button
                    android:text="@string/button_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"/>
            <TextView
                    android:text="@string/question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    app:layout_constraintBottom_toTopOf="@+id/textView4"
                    android:layout_marginBottom="56dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/input_answers">

            <TextView
                    android:text="@string/answer_textA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_titleA"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/space"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_textA"
                    app:layout_constraintTop_toBottomOf="@+id/textView_titleA"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/space" android:layout_marginTop="8dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView_textA"
                    app:layout_constraintEnd_toStartOf="@+id/space"
                    app:layout_constraintStart_toStartOf="parent" android:id="@+id/constraintLayout9"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/space2">

                <Button
                        android:text="@string/button_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/record_A"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_delete"
                        android:id="@+id/delete_A"
                        app:layout_constraintStart_toEndOf="@+id/record_A"
                        android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                    android:text="@string/answer_textB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_titleB"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/space"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_textB"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_titleB"
                    app:layout_constraintStart_toEndOf="@+id/space"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/constraintLayout10"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_textB" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/space" app:layout_constraintBottom_toTopOf="@+id/space3">

                <Button
                        android:text="@string/button_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/record_B"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_delete"
                        android:id="@+id/delete_B"
                        app:layout_constraintStart_toEndOf="@+id/record_B"
                        android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                    android:text="@string/answer_textC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_titleC"
                    app:layout_constraintEnd_toStartOf="@+id/space"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space2"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp" android:id="@+id/textView_textC"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_titleC"
                    app:layout_constraintEnd_toStartOf="@+id/space"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/constraintLayout11"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_textC"
                    app:layout_constraintEnd_toStartOf="@+id/space"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent">

                <Button
                        android:text="@string/button_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/record_C"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_delete"
                        android:id="@+id/delete_C"
                        app:layout_constraintStart_toEndOf="@+id/record_C"
                        android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                    android:text="@string/answer_textD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_titleD"
                    app:layout_constraintStart_toEndOf="@+id/space"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/space3"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_textD"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_titleD"
                    app:layout_constraintStart_toEndOf="@+id/space"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/constraintLayout12"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_textD" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/space"
                    app:layout_constraintBottom_toBottomOf="parent">

                <Button
                        android:text="@string/button_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/record_D"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_delete"
                        android:id="@+id/delete_D"
                        app:layout_constraintStart_toEndOf="@+id/record_D"
                        android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Space
                    android:layout_width="32dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:id="@+id/space"/>
            <Space
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    app:layout_constraintEnd_toStartOf="@+id/space"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/space2"/>
            <Space
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/space"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/space3"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="56dp"
                android:id="@+id/constraintLayout8">

            <Button
                    android:text="@string/button_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button2"
                    app:layout_constraintEnd_toStartOf="@+id/button3"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="56dp"/>
            <Button
                    android:text="@string/button_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button3"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="56dp">

            <Button
                    android:text="@string/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button10"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/button11"
                    android:layout_marginEnd="56dp"/>
            <Button
                    android:text="@string/button_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button11"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/constraintLayout6"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>