<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LobbyActivity" android:scrollbars="vertical">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" tools:srcCompat="@drawable/bg_lobby"
            android:id="@+id/imageView2"
            tools:ignore="ContentDescription"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:scaleType="fitEnd" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            android:layout_marginTop="60dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center" android:textColor="#2196F3"
            android:textIsSelectable="false" android:textSize="34sp" android:textStyle="bold"
    />
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:id="@+id/constraintLayout5">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout4" android:layout_marginEnd="96dp">

            <TextView
                    android:text="@string/lobby_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView20"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:textSize="16sp" android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView20" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:textSize="24sp" android:textColor="#3F51B5"
                    android:textStyle="bold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout4">

            <TextView
                    android:text="@string/lobby_playerAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView7"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:textSize="16sp" android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView8"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:textSize="24sp" android:textStyle="bold" android:textColor="#3F51B5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="48dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
            android:id="@+id/lobby_players"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" android:layout_marginTop="56dp"
            app:layout_constraintBottom_toTopOf="@+id/button_startQuiz" android:layout_marginBottom="50dp">

        <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView2"
                app:layout_constraintStart_toStartOf="parent"
                android:scrollbarAlwaysDrawVerticalTrack="false" app:layout_constraintTop_toTopOf="parent"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent">
            <androidx.gridlayout.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/gridLayout"/>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
            android:text="@string/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_startQuiz"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="50dp"
            android:onClick="startQuiz"/>
</androidx.constraintlayout.widget.ConstraintLayout>